Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1568,7 +1568,7 @@
  flavor_guj.5.d:0 "我々の首都に住むスーフィーの指導者の一人は、最近、我々の王朝に対する彼の支持のためにより無遠慮になっている。我々が王国を良い方向に向けていることは、今や多くの人にとって明らかであり、これらの声明が国民の気分に与える影響は非常に肯定的である。"
  flavor_guj.5.a:0 "何と明晰な視点を持った男だろう！"
  flavor_guj.6.t:0 "ジャイナ教とヒンドゥー教の商人社会－Vasanta Vilasa"
- flavor_guj.6.d:0 "グジャラートの商人の幸福は、常に我々の王朝の心の近くにあり、我々は我々の都市で仕事をしているジャイナ教、ヒンドゥー教あるいはパールシーの交易商たちを許容するだけでなく、多くの点で奨励してきた。\nその結果、事業は最近グジャラートのあらゆる宗教の商人たちにとって非常に良いものであった。最近完成した春とクリシュナ神の儀式については、ヒンドゥー教の有名なアフマダーバードの商人が都市とその支配者を賞賛する機会を得た。\nこれは何よりも、我々の政策の成功の表れである。"
+ flavor_guj.6.d:0 "グジャラートの商人の幸福は、常に我々の王朝の中心近くにあり、我々は我々の都市で仕事をしているジャイナ教、ヒンドゥー教、パールシー教の交易商たちを許容するだけでなく、さまざまな形で奨励してきた。\nその結果、最近のグジャラートのあらゆる宗教の商人たちにとって事業が非常に良いものとなった。春の儀式とクリシュナ神について書かれた最近完成した原稿の中で、ヒンドゥー教の有名なアフマダーバードの商人がこの機会を利用し、この都市とその支配者を称賛した。\nこれは何よりも、我々の政策が成功していることの表れである。"
  flavor_guj.6.a:0 "素晴らしい"
  flavor_guj.6.b:0 "冒涜だ！明らかに我々の法はあまりにも手ぬるいものになっている。"
  flavor_guj.7.t:0 "オスマン帝国の大使館"
