--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -92,7 +92,7 @@
  seven_cities_events.5.a:0 "彼らを連れて、銀を見つけよう！"
  seven_cities_events.5.b:0 "そこに真実の一粒はない！"
  seven_cities_events.6.t:0 "ノルムベガ"
- seven_cities_events.6.d:0 "フランスの航海者が、40リーグ（約200km）以上の幅を持ち、多くの島々が点在する大河について報告した。これによれば、河の中15リーグほどにノルムベガという都市があり、あらゆる種類の毛皮を売る賢者達が住んでいるという。彼らはヴァイキングの子孫でクロテンの革を着て他の毛皮で着飾り、ラテン語に似た言語を話し、長身かつハンサムであり、太陽を崇拝するのだそうだ。また都市自体も極めて豊かで、住民はみな金を装飾品として身に着けていたというから、近くには金山もあるはずだ。"
+ seven_cities_events.6.d:0 "フランスの航海者が、40リーグ（約200km）以上の幅を持ち、多くの島々が点在する大河について報告した。これによれば、河の中15リーグほどにノルムベガという都市があり、あらゆる種類の毛皮を売る聡明な住民が住んでいるという。彼らはヴァイキングの子孫で、毛皮を着てクロテンを身にまとい、ラテン語に似た言語を話し、長身かつハンサムであり、太陽を崇拝するのだそうだ。また都市自体も極めて豊かで、住民はみな金を装飾品として身に着けていたというから、金を産出しているはずだ。"
  seven_cities_events.6.a:0 "コンキスタドールを送ろう！この地を見つけなければ。"
  seven_cities_events.6.b:0 "無駄な努力だ。"
  seven_cities_events.7.t:0 "サグネ王国"
@@ -260,7 +260,7 @@
  seven_cities_events.306.a:0 "彼らの和睦を試みよう。"
  seven_cities_events.306.b:0 "よくやった！"
  seven_cities_events.307.t:0 "出血する歯茎と抜け落ちる歯"
- seven_cities_events.307.d:0 "ほとんどが乾燥し、塩漬けされた肉と乾燥した穀物からなる食事の制限により、倦怠感と無気力は壊血病として認められた最初の症状であったはずであったが、歯茎が出血して歯が抜け落ちるまで、我々は探検隊のメンバーを救うために何かをしなければならないことに気が付かなかった。彼らが我々にとって未知の動植物を抱える地方を探索しているとき、それが有毒かもしれないため、何でも食べようとすることは賢明ではない。あるいは、$PROVINCENAME$の原住民との接触を確立し、彼らの助けを求めるべきだろうか？"
+ seven_cities_events.307.d:0 "主に燻製肉と塩漬け肉と乾燥穀物からなる食事内容により、倦怠感と無気力は壊血病として疑うべき初期症状であったはずであったが、歯茎が出血して歯が抜け落ちるまで、我々は探検隊のメンバーを救うために何かをしなければならないことに気が付かなかった。我々にとって未知の動植物が生息している地方を探索しているのだから、有毒かもしれないものを食べようとすることは賢明ではない。もしかしたら、$PROVINCENAME$の原住民との接触をとり、彼らの助けを求めるべきではないだろうか？"
  seven_cities_events.307.a:0 "交易で薬を得よう！"
  seven_cities_events.307.b:0 "いや、まずは果物を食べることから始めよう。"
  seven_cities_events.308.t:0 "アマゾーン"
@@ -300,7 +300,7 @@
  seven_cities_events.406.t:0 "ポイズン・ロック"
  seven_cities_events.406.d:0 "有毒植物を食べたために9頭の馬が死に、探検隊はさらに2頭の瀕死の馬を置き去りにせざるを得なかった。有害な植物と有毒な動物しかない呪われた場所であり、そこでキャンプすると決めたことをコンキスタドールは後悔している。巨大な岩層は吹き抜ける激しい風から身を守ってくれた。しかし、ポイズン・ロックはコンキスタドールによって命名されたその名の通り、人間や動物のための場所ではなかった。"
  seven_cities_events.406.a:0 "必要であれば歩いて進もう！"
- seven_cities_events.407.t:0 "$PROVINCENAME$のダイヤモンドのような偽り"
+ seven_cities_events.407.t:0 "$PROVINCENAME$の紛い物ダイヤモンド"
  seven_cities_events.407.d:0 "我々の探検家は、$PROVINCENAME$で発見したと主張している宝石を我々に送ってきた。白く輝き、彼はそれらがダイヤモンドであると信じているが、博識な学者はそれらがありふれた水晶であることを教えてくれる。富の源からはほど遠く、彼らは嘲笑の源になった…"
  seven_cities_events.407.a:0 "かすかなダイヤモンドがすべてではない。"
  seven_cities_events.408.t:0 "逃亡者、再び現る！"
@@ -732,8 +732,8 @@
  nahuatl_events.1.b:0 "終わりは近い。"
  nahuatl_events.2.t:0 "大切な息子"
  nahuatl_events.2.d:0 "[Root.Owner.Capital.GetCapitalName]における並外れた子供の誕生についての知らせが我々に届いた。ほぼ2日間に及んだ陣痛の後、少年は庶民の女性から産まれたが、占星術師や他の占い師は、彼が偉大なものとして運命づけられていることに同意している。伝統として、彼の母親はすぐに彼を若者の家に導き、後に思春期から結婚するまでの武道教育を扱う人に彼を紹介するだろう。"
- nahuatl_events.2.a:0 "テポチャカリが彼を素晴らしい戦士にするだろう。"
- nahuatl_events.2.a.tt:0 "子供はテポチャカリで教育されます。"
+ nahuatl_events.2.a:0 "テルポチカリが彼を素晴らしい戦士にするだろう。"
+ nahuatl_events.2.a.tt:0 "子供はテルポチカリで教育されます。"
  nahuatl_events.2.b:0 "彼をカルメカクに入れることを試みる。"
  nahuatl_events.2.b.tt:0 "子供はカルメカクで教育を受け、彼の可能性をさらに高めますが、人々は伝統を破ったことに注意を向けるでしょう。"
  nahuatl_events.3.t:0 "戦いは汝の功罪であり、汝の務めである"
@@ -1087,7 +1087,7 @@
  ND_SAVE_ERROR_WRITING:0 "国家書き込みエラー"
  ND_SAVE_ERROR_WRITING_UNKNOWN:0 "原因は不明ですが、カスタム国家の保存に失敗しました。\n\n十分な空き領域があるか確認してください。"
  seven_cities_events.1000.t:0 "足跡は冷たく育つ"
- seven_cities_events.1000.d:0 "我々がかつて発見するために着手した伝説の宝物は、手の届かないところにあるようだ。長い間何も聞かず、見ていないことで、コンキスタドールは絶望し始めている。"
+ seven_cities_events.1000.d:0 "かつて我々が探し求めた伝説の秘宝は、もう手の届かないところにあるようだ。これほど長い間、何も見聞が得られなかったので、コンキスタドールは絶望し始めている。"
  seven_cities_events.1000.a:0 "我々は代わりに他の宝物を探す必要がある。"
  nahuatl_events.3.b.tt:1 "[Root.Monarch.GetName]は[Root.Monarch.GetHerHis]の血をいくらか捧げます。これは確実に我々の戦士を助けるでしょうが、戦士が敗北した場合、統治者の評判に影響があります。"
  custom_idea_free_adm_policy:0 "拡大された官僚機構"
