Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1046,13 +1046,13 @@
  flavor_ser.EVTOPTB4:0 "[Root.Capital.GetName]がより輝かしいものになるべきだ！"
  emp_ita_prosperity_for_all_title:0 "万人の繁栄"
  emp_ita_prosperity_for_all_desc:0 "我々の偉大な統一は、純粋に政治的なものであってはならない。我々はすべてのイタリア人に安全と経済的な強さを提供するため、全力を尽くす必要がある。"
- emp_ita_develop_the_south_title:0 "南部の発展"
+ emp_ita_develop_the_south_title:0 "南部の開発"
  emp_ita_develop_the_south_desc:0 "安定性だけでは、多くの人々を改善するには不十分だ。特に南イタリアは歴史的に大きな困難に苦しんでいる。すべてのイタリア人に我々の支配に満足してもらいたいのであれば、我々は、南イタリアに特別な注意を払う必要がある。"
  emp_ita_continue_the_renaissance_title:0 "ルネサンスの継続"
  emp_ita_continue_the_renaissance_desc:0 "イタリアは長い間、知的思考と芸術的成果の発祥地であった。我々はこれらの素晴らしい伝統を支援するために全力を尽くし、新しいアイデアを広め、新しい世代の思想家や芸術家を刺激するために多大な貢献をする教育的な学術の中心地を拡大しなければならない。"
  emp_ita_italia_transalpina_title:0 "アルプスの向こうのイタリア"
  emp_ita_italia_transalpina_desc:0 "プロヴァンスとサヴォワは我々の偉大な国家と歴史的な関係があり、その関係を強化するために、征服などの努力をすべきだと考える。"
- emp_ita_the_seven_provinces_title:0 "7つの州"
+ emp_ita_the_seven_provinces_title:0 "七つの州"
  emp_ita_the_seven_provinces_desc:0 "南フランスのオック人はイタリアと長年のつながりがあり、文化や思想、民族に相互の影響を与えている。これらの関係を振興し、南フランスを集団に参加させることは、まず間違いない。"
  emp_ita_the_gallic_wars_title:0 "ガリア戦争"
  emp_ita_the_gallic_wars_desc:0 "ずっと昔、我々の祖先は前進し、ガリアに文明をもたらした。率直に言って、我々が再びそれをやる時だ。"
@@ -1088,7 +1088,7 @@
  emp_ita_a_worthy_navy_desc:0 "イタリアは広大な海と他の多くの海軍に囲まれた大きな半島である。我々自身の立派な艦隊がなければ、我々は海軍の封鎖と侵略に対して無防備になるだろう。我々は領土と栄光を守るために艦隊を構築しなければならない。"
  emp_ita_africa_proconsulare_title:0 "アフリカ前執政官"
  emp_ita_africa_proconsulare_desc:0 "地中海での我々の支配は、バルバリア海賊や北アフリカからの他のならず者たちの脅威にさらされている。我々の土地を投影したい場合、海賊の隠れ家とそれらを保護する北アフリカの政権を破壊しなければならない。"
- emp_ita_befriend_ethiopia_title:0 "エチオピアの友人となれ"
+ emp_ita_befriend_ethiopia_title:0 "エチオピアと誼を結べ"
  emp_ita_befriend_ethiopia_desc:0 "古代の伝説では、異教の領域の向こうに暮らすキリスト教徒の王、プレスター・ジョンの王国について語っている。そこから、我々はさらに学んだ。マルコ・ポーロ自身がエチオピアの偉大なキリスト教の王国について話し、そのアフリカの土地と我々との接触はそれ以来増加している。エチオピアの人々に手を差し伸べ、友情と相互保護の絆を築くことは、後世の利益と我々の戦略的利益へと繋がる。"
  emp_ita_befriend_ethiopia_capital_tt:0 "首都が§Yアフリカの角§!地方にある"
  emp_ita_invade_egypt_title:0 "エジプト侵略"
@@ -1123,7 +1123,7 @@
  emp_ven_plague_doctor_training_title:0 "ペスト医の訓練"
  emp_ven_plague_doctor_training_desc:0 "ペスト医は、大部分が素人である。専門家の医師や外科医は最も裕福な時期を過ごす傾向があるのに対し、二流のペスト医は土地を歩き回り、最良の治療を行うことができない人々を追う傾向がある。彼らの質には大きな差があるが、ペスト医に標準的な知識基盤を提供する育成計画を導入した場合、地方の人々の健康は劇的に向上するだろう。"
  emp_ven_plague_doctor_training_tt:0 "§Y[Root.GetName]§!の市民が疫病のイベントに襲われる可能性が低くなります。"
- emp_ven_promote_the_carnevale_title:0 "謝肉祭の振興"
+ emp_ven_promote_the_carnevale_title:0 "カルネヴァーレの振興"
  emp_ven_promote_the_carnevale_desc:0 "我々の有名な謝肉祭は1162年まで遡り、アクイレイア総主教に対する我々の壮大な勝利を記念するものであった。それ以来、祭りはさらに壮大に、衣装はより華やかに、お祝いはますます退廃的なものになった。率直に言って、その素晴らしさは、祝うことを想定したものと釣り合いが取れてはいないが、我々はそれを有利に利用することができる。我々が外国の外交官に謝肉祭の壮大さを見せつけるほど、我々の豊かさに関するより速い言葉が広まるだろう。"
  emp_ven_new_pilings_title:0 "新しい杭"
  emp_ven_new_pilings_desc:0 "ヴェネツィアは無数の木製の杭の上に建てられた街であり、その歴史は何世紀も前に遡る。一部の改修は長い間遅れている。"
@@ -1161,7 +1161,7 @@
  emp_ven_challenge_papal_supremacy_desc:0 "我々は長い間、教皇と一定の理解を維持してきた。教皇は我々の教会の問題に干渉せず、我々は教皇の問題に干渉しなかった。しかし、最近、我々自身の力が高まるにつれて、教皇はより積極的になり、ヨーロッパ中の教会問題に関与し始めた。我々は教皇に我々の古い取り決めを思い出させ、そして教皇庁の権力の掌握を確認する時だ。"
  emp_ven_monopolize_adriatic_trade_title:0 "アドリア交易の独占"
  emp_ven_monopolize_adriatic_trade_desc:0 "ヴェネツィアはアドリア海全体の交易を支配するべきであり、それは我々を新興都市のラグーザと衝突させている。"
- emp_ven_reclaim_the_aegean_title:0 "エーゲ海の奪還"
+ emp_ven_reclaim_the_aegean_title:0 "エーゲ海への奪還"
  emp_ven_reclaim_the_aegean_desc:0 "我々は東地中海での交易の長い歴史を持っているが、運命がギリシャと小アジアで揺れ動いたことで、商人の運命は苦しむことになった。エーゲ海での立場を再表明するには武力が必要だが、成功すれば我々は繁栄するだろう。"
  emp_ven_annex_cyprus_title:0 "キプロスの併合"
  emp_ven_annex_cyprus_desc:0 "キプロスは東地中海という王冠の宝石である。キプロスから、我々はレヴァント、アナトリア、さらにはエジプトまで、海洋交易における壮大な支配権を行使することができた！しかし、まず、我々は島を獲得する必要がある。"
@@ -2008,7 +2008,7 @@
  itm_educated_court_title:0 "教育された宮廷"
  itm_educated_court_desc:0 "賢明な君主はお世辞を軽蔑し、賢明な助言にこそ耳を傾ける必要がある。しかし、そのような助言のためには賢明な助言者が必要であり、我々にはまださらにいくつかのそれが必要である。"
  itm_spheres_of_influence_title:0 "勢力圏"
- itm_spheres_of_influence_desc:0 "君主は力だけで君臨することはできず、時として、より微妙な接近方法が必要であり、それによって我々より弱い者は、我々を征服者ではなく保護者として見る。もちろん、たとえ剣がなくとも、彼らは、我々が彼らを自分たちに近づけ、自身の服従に近づいていることを理解しないだろう。"
+ itm_spheres_of_influence_desc:0 "君主は力だけで君臨することはできず、時として、より繊細な姿勢が必要であり、それによって我々より弱い者は、我々を征服者ではなく保護者として見る。もちろん、たとえ剣がなくとも、我々が彼らを自分たちに近づけ、自身の服従に近づけていることに彼らは気付かないだろう。"
  itm_two_guaranteed_countries:0 "§Y2§!以上の国が§Y[Root.GetName]§!に独立保障されている必要があります。"
  itm_prelate_power_title:0 "高位聖職者の権力"
  itm_prelate_power_desc:0 "世俗的な目的のために人々の信仰を利用するのは恥ずべきことではない。教会の権力を利用することは、どんなに賢明な君主であっても最大限に追求すべきものだ。"
