--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -3239,7 +3239,7 @@
  ARM1_ideas_bonus:0 "大アルメニアの宿願"
  apostolic_church1:0 "使徒教会"
  apostolic_church1_desc:0 "アルメニアは301年に初めてキリスト教を国教として成立した最初の国家であった。世界初の国教会を持ったという感覚は、自国に計り知れない誇りをもたらしている。自国の宗教信仰は、自身の主体性と希望の維持を助けてくれ、特に聖メスロプ・マシュトツとアルメニア文字によって、自民族の運命に大改革をもたらした。それはアルメニアの国家性と主体性を強化するための重要な第一歩であった。"
- land_reclamation1:0 "土地の開墾"
+ land_reclamation1:0 "土地の干拓"
  land_reclamation1_desc:0 "アルメニアは何世紀にもわたる戦争で荒廃し、近隣諸国によって引き裂かれた。失地を取り戻し、廃墟と化した教会や要塞を修復するとともに、居住に適した土地にすることで、自領をより強く成長させ、国民の生活を改善できる。"
  melikdom_organization1:0 "メリクドム組織"
  melikdom_organization1_desc:0 "独立したアルメニア国家のいくつかの砦の一つとして、アルメニアは、古いナハラル体制が崩壊したことから、メリクドムと呼ばれる封建領主によって統治された。メリクドムとその臣下との関係は、軍の指揮官と下士官の関係であり、封建的な君主と農奴の関係ではなかった。農民は多くの場合土地を所有することが許され、自由かつ所有できる財産であった。"
