--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -1843,5 +1843,5 @@
  estate_regency_mod_desc_tt:0 "§Y後継者§!が即位するまで"
  HOLY_SITE_4336_DESC:0 "バクーのアテシュギャーフは、ゾロアスター教の最も重要な火の寺院の一つだ。厳密にはスラカニにあるのだが、都市バクーに関連付けて「バクーの火」とも呼んできたように、古代から都市バクーと結びつけてきた。その火は地表から直接出ており、猛烈な勢いで、炎は永久に燃え続けている。今でも周辺には「火の崇拝者」が暮らしていると言われている。"
  HOLY_SITE_2212_DESC:0 "ホラズムがイスラム勢力に敗れたとき、一部の崇拝者はインドに逃れ、聖火を携えてサンジャンに共同体を設立した。この新共同体とペルシアの元々の共同体との間にはシルシラ、伝統的な系図が形成され、サンジャンの名の由来となった。1297年以来、火は転々と動き、最初はバーロット洞窟、次にバーンスダーの村落へ、そして最後はナブサーリへと移動した。"
- pegu_subject_ayu_tt:0 "\n§Yアユタヤ§!が朝貢国意外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
- pegu_subject_lna_tt:0 "\n§Yラーンナー§!が朝貢国意外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
+ pegu_subject_ayu_tt:0 "\n§Yアユタヤ§!が朝貢国以外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
+ pegu_subject_lna_tt:0 "\n§Yラーンナー§!が朝貢国以外の従属国である状態でこのミッションを完了した場合、さらに以下も発生します："
