--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -5533,9 +5533,9 @@
  annex_avignon_title:0 "西洋の分裂の終わり"
  annex_avignon_desc:0 "大シスマの間、フランス人の一団によって支持された対立教皇はアヴィニョンに置かれた。我々がアヴィニョンを支配するなら、真の信仰の真の一人の指導者に対する我々の主張は疑う余地がない。"
  catholic_italy_title:0 "異端との戦い"
- catholic_italy_desc:0 "安全な行動の約束は、異端者に与えられたときに拘束されるものではなく、皇帝は機会があればルターを火あぶりにしようとしたはずだ。今では彼の異端の教えがイタリアに広がっており、これは踏み潰す必要がある。"
+ catholic_italy_desc:0 "異端者に安全な行動を約束しても拘束力はない。皇帝は機会があればルターを火あぶりにするべきだった。今では彼の異端の教えがイタリアに広がっており、これを踏み潰す必要がある。"
  academy_in_rome_title:0 "ルネサンスの君主"
- academy_in_rome_desc:0 "ルネサンス型における真の君主であるためには、ローマを最高の芸術家の安息の地としなければならない。この目的のために、我々は美術アカデミーの後援者となるべきだ。"
+ academy_in_rome_desc:0 "ルネサンス様式における真の君主であるためには、ローマを最高の芸術家の安息の地としなければならない。この目的のために、我々は美術アカデミーの後援者となるべきだ。"
  conquer_orkney_title:0 "オークニーへの請求"
  conquer_orkney_desc:0 "オークニーは、スコットランド王国にとって戦略的に重要な位置にある。我々は今、これらの土地に対する正当な請求権の下に、それを獲得する必要がある。"
  scotland_france_relations_title:0 "古い同盟"
