Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -777,18 +777,18 @@
  aow_events.52.d:0 "[Root.GetName]の枢機卿は弱い性格であると噂されているが、追加調査を必要としないほど常に目立ようにしてきた。今、彼に目をつけた[From.GetName]の外国人諜報員がこれに終止符を打ち、彼の罪を教皇に暴露したようだ。枢機卿としての彼の時間はいくばくもなく。そして、この不意の[From.GetAdjective]による介入のために教皇庁における我々の力は弱まるだろう。"
  aow_events.52.a:0 "我々が影響力を得た方法は、何と陰険なものであったことか。"
  west_african.1.t:0 "[Root.GetName]・スルタン国"
- west_african.1.d:0 "我が国の民は、その起源から遠い道のりを歩んできた。かつては自身の慣習や指導者を持っていた部族もいたが、[Root.GetName]の民は現在、[Root.Monarch.GetName]を支配者として認識している。多くの人は、[Root.Monarch.GetSheHe]がすぐに[Root.Monarch.GetHerselfHimself]をスルタンと宣言するかもしれないと推測しているが、カリフによって[Root.Monarch.GetHerHim]に称号が与えられない限り、これは論争なしに行うことはできない。\n\nオスマン・カリフ国のカリフは遠々しき都市イスタンブールに座しており、彼らは喜んで我々との謁見を与えてくれるだろうという知らせが、我々に伝わってきた。おそらくカリフの祝福により、[Root.GetName]のスルタンはその市民の忠実な人々の間で支持を獲得するだろう。"
+ west_african.1.d:0 "我が国の民は、その起源から長い道のりを歩んできた。かつては独自の慣習や指導者を持つ多くの部族が存在したが、今では[Root.GetName]全体の人々が[Root.Monarch.GetName]を支配者と認めている。多くの人は、[Root.Monarch.GetSheHe]が近いうちに[Root.Monarch.GetHerselfHimself]をスルタンと宣言するのではないかと推測しているが、カリフによって[Root.Monarch.GetHerHim]に称号が与えられない限り、これに異論がないわけではない。\n\nオスマン・カリフ国のカリフは遠々しき都市イスタンブールに座しており、彼らは我々と謁見する気があるかもしれないという知らせが、我々に伝わってきた。おそらくカリフの祝福があれば、[Root.GetName]のスルタンはその市民の忠実な人々の間で支持を獲得するだろう。"
  west_african.1.a:0 "我々はこの遠々しき土地に旅し、彼らの支援を求めよう！"
  west_african.1.b:0 "統治するのに彼らの承認など必要ない！"
  west_african.2.t:0 "[From.GetName]のスルタン"
- west_african.2.d:0 "新しいスルタンを作成するため、カリフとしての[Root.Monarch.GetHerHis]の立場における[Root.Monarch.GetName]からの支持を求めて、[From.GetName]の土地から使者が到着した。かつては異種の部族の集まりだったが、我々は、[From.GetAdjective]の人々が今や敬虔なムスリムであり、我々の支援を得てスルタンの称号を握ることを望む彼らの支配者、[From.Monarch.GetName]に忠誠を誓っていると知らされた。"
- west_african.2.a:0 "崇高な目標だ。新しいスルタンの基盤は我々にとっても祝福だ。"
- west_african.2.b:0 "スルタンになりたいのなら、人々に納得させなければならない。"
+ west_african.2.d:0 "[From.GetName]の土地から使者が到着し、[Root.Monarch.GetHerHis]のカリフとしての立場で、新しいスルタン国の創設のために[Root.Monarch.GetName]からの支援を求めている。かつては異種の部族の集まりだったが、[From.GetAdjective]の人々が今や敬虔なムスリムで、支配者に忠誠を誓っており、[From.Monarch.GetName]は我々の支援を得てスルタンの称号を入手したいと望んでいるとのことである。"
+ west_african.2.a:0 "崇高な目標だ。新しいスルタン国の建国は我々にとっても祝福だ。"
+ west_african.2.b:0 "スルタンになりたいのなら、あなた自身が国民を納得させなさい。"
  west_african.3.t:0 "カリフがスルタン国を承認"
- west_african.3.d:0 "ムスリム世界の指導者が、[Root.Monarch.GetName]は[Root.GetName]のスルタンであることを、どのように宣言したのかについて、イスタンブールから帰還した使者が知らせている。別の方法では、権力と政治的動乱のための暴力的闘争へと変わったかもしれず、今や、[Root.GetAdjective]の人々の中でも賢明で信仰心の篤い者のほとんど（あるいはすべて）の支持を見てとれる。"
+ west_african.3.d:0 "ムスリム世界の指導者が[Root.Monarch.GetName]を[Root.GetName]のスルタンであると宣言したことを、イスタンブールから帰還した使者が知らせている。別の方法では、権力をめぐる暴力的な闘争と政治的動乱に発展していたかもしれないものが、今や、[Root.GetAdjective]の人々の中でも賢明で信仰心の篤い者のほとんど（あるいはすべて）の支持を見てとれる。"
  west_african.3.a:0 "我々に反対するのは不信仰者のみだろう。"
  west_african.4.t:0 "カリフがスルタン国を非承認"
- west_african.4.d:0 "使者はイスタンブールから帰還したが、我々の最善の努力にもかかわらず、カリフは我々に称号を与えなかった。[From.Monarch.GetHerHim]によれば、[Root.Monarch.GetName]がスルタンとして統治する立場を人々に納得させるかどうかは、我々次第である。"
+ west_african.4.d:0 "使者はイスタンブールから帰還したが、我々の最善の努力にもかかわらず、カリフは我々に称号を与えなかった。[From.Monarch.GetHerHim]によれば、[Root.Monarch.GetName]がスルタンとしての統治能力を人々に納得させるのは、我々次第であるということだ。"
  west_african.4.a:0 "このような誤った判断を下すカリフはその地位にふさわしいのだろうか。"
  west_african.5.t:0 "砂漠の民"
  west_african.5.d:0 "[Root.Owner.GetAdjective]の人々は、この乾燥した気候に長い間暮らしている。これは、いくつかの愚かな国々が、他にとって望ましくない土地に住んでいるとして我々を払いのける原因にもなっているが、我々は彼らが恐れるのも無理はない、生存と戦闘のための能力を十分に習得している。\n\n国境の向こう側の[Root.GetName]において、我々の兄弟たちは、あなたが彼らを過小評価すれば[Root.Culture.GetName]が受け入れられるような心構えのない、他の人々による迫害に苦しんでいる。これらの地元の人々の助けを借りて、我々は彼らの迫害者の土地への襲撃を組織し、迅速に打ち破り、他の誰よりも砂漠を良く知っているという事実を生かすことができた。"
