--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -2696,7 +2696,7 @@
  flavor_tur.206.a:0 "きたる試練を乗り越える帝国を築けるように！"
  flavor_tur.206.a.tt:1 "内政の有効性と安定性は§Yオスマン帝国の退廃§!カウンターのレベルによって測定されます。このカウンターが§Y100§!に達すると、国難§Yオスマン帝国の権力闘争§!が利用可能になります。\n自国の§Y政府§!タブにある§Y退廃§!進捗バーにカーソルを合わせると、現時点での§Yオスマン帝国の退廃§!の値を見ることができます。"
  flavor_tur.207.t:0 "騎士海賊団を撃退"
- flavor_tur.207.desc:1 "聖ヨハネ騎士団が信仰の厚い人間だと主張すること自体、冗談のような話だ。サラーフ・アッディンの時代には、異教徒とはいえ、名誉ある組織だったのかもしれない。しかし、近年では、この騎士団は、わが国の航路に嫌がらせをし、平和的な商人たちの商品を強奪する海賊と略奪者の一団にすぎない。幸いなことに、この盗賊団をロードスから追放した今、商人たちは再び妨害を受けず海を行き来できるようになり、沿岸の集落に住む人々は、略奪を働くフランク人の集団に財産を奪われる心配をすることなく眠れるようになった。"
+ flavor_tur.207.desc:1 "聖ヨハネ騎士団が信仰の厚い人間だと主張すること自体、冗談のような話だ。サラーフ・アッディンの時代には、まだ異教徒であるとしても、名誉ある組織だったのかもしれない。しかし近年では、この騎士団はわが国の航路に嫌がらせをし、平和的な商人たちの商品を強奪する海賊と略奪者の一団にすぎない。幸いなことに、この盗賊団をロードスから追放した今、商人たちは再び妨害を受けず海を行き来できるようになり、沿岸の集落に住む人々は、略奪を働くフランク人の集団に財産を奪われる心配をすることなく眠れるようになった。"
  flavor_tur.207.a:0 "我が海岸に安全と繫栄を！"
  flavor_tur.207.a.tt:0 "沿岸襲撃に苦しんでいたすべての沿岸州が獲得："
  flavor_tur.208.t:0 "イェニチェリ"
@@ -2832,7 +2832,7 @@
  flavor_tur.239.b:0 "彼が見込みのある人物だったとしても、[Root.Heir.GetName]が支配する日が来るべきである。"
  tur_10_dev_randomly_given_to_christian_provinces_tt:0 "領有するランダムな§Yキリスト教§!の§Y10§!州に§G10§!の開発度が分配される。"
  flavor_tur.240.t:0 "マムルーク・スルタン国の崩壊"
- flavor_tur.240.desc:1 "マムルークがエジプトやレヴァントで実行していた保護恐喝を行政と呼ぶことは、控えめに言っても寛大な評価と言えるでしょう。彼らの支配がこれほど長く続いたことは、注視すべき奇跡です。しかしながら現在、彼らとの直近の紛争において、自国の偉大なるスルタンの軍は、シリアを下りエジプトまで法と秩序を一掃しました。さらに、[From.GetCapitalName]が自軍によって陥落したことで、マムルーク政権は彼らの領内でほぼ崩壊し、自国がスルタン国全土を掌握することに反対する真の中央政府は存在しません。しかし、これら全領土を直ちに掌握するには、現地の影の実力者に頼る必要があり、スルタン領を自国の統治に統合することは至難の業となることでしょう。"
+ flavor_tur.240.desc:1 "マムルークがエジプトやレヴァントで実行していた保護恐喝を行政と呼ぶことは、控えめに言っても寛大な評価と言えるでしょう。彼らの支配がこれほど長く続いたことは、注視すべき奇跡です。しかしながら現在、彼らとの直近の紛争において、自国の偉大なるスルタンの軍は、シリアを下りエジプトまで法と秩序を一掃しました。さらに、彼らの首都が自軍によって陥落したことで、マムルーク政権は彼らの領内でほぼ崩壊し、自国がスルタン国全土を掌握することに反対する真の中央政府は存在しません。しかし、これら全領土を直ちに掌握するには、現地の影の実力者に頼る必要があり、スルタン領を自国の統治に統合することは至難の業となることでしょう。"
  flavor_tur.240.a:0 "彼らの土地はスルタン[Root.Monarch.GetName]に服属する！"
  flavor_tur.240.a.tt:2 "もし§Y[MAM.Capital.GetName]§!を§Y3年間§!保持し、§Y[MAM.GetName]§!に対する戦勝点を§Y90%§!にすれば、イベント§Yマムルーク・スルタン国の崩壊§!が発生し、§Yマムルーク§!との白紙講和を締結し、即座に§Yエジプト州§!を形成することができます。"
  flavor_tur.240.b:0 "急がば回れだ…"
