--- a/source/localisation/hints_l_english.yml
+++ b/source/localisation/hints_l_english.yml
@@ -313,7 +313,7 @@
  HINT_LEADERSIEGE_TITLE:0 "指揮官の包囲力"
  HINT_LEADERSIEGE_TEXT:0 "指揮官の包囲力は、包囲中の包囲ロールとしてあなたにボーナスを与えます。"
  HINT_MORALE_TITLE:0 "士気"
- HINT_MORALE_TEXT:0 "戦闘は、片側が完全に撃破されずに逃げることによって勝利することがよくあります。士気は、どれくらいの士気損害を被れば軍隊が逃げ出すかを決定します。"
+ HINT_MORALE_TEXT:0 "戦闘は多くの場合、片方が逃走することによって勝敗が決するのであり、片方が全滅して勝敗が決するものではありません。士気は、どれくらいの士気損害を被れば軍隊が逃げ出すかを決定します。"
  HINT_MANEUVER_TITLE:0 "機動"
  HINT_MANEUVER_TEXT:0 "機動は、戦闘中のユニットの戦闘領域の大きさを決定します。歩兵は1で始まり、騎兵と砲兵はともに2で始まります。機動は技術によって改善することができます。これを、他の目的のために使用される指揮官の機動力と混同してはいけません。"
  HINT_SEACOMBAT_TITLE:0 "海戦"
@@ -337,6 +337,6 @@
  HINT_PRIVATEERING_TITLE:0 "私掠船"
  HINT_PRIVATEERING_TEXT:0 "小型船を含む艦隊では、私掠活動が可能です。私掠船艦隊は、小型船の交易力を、選択された交易ノードの海賊国家に加えます。保護交易ミッションとは異なり、私掠船ミッションを開始するには、既存の交易力は交易ノードで必要とされません。"
  HINT_IMPROVERELATIONS_TITLE:0 "関係改善"
- HINT_IMPROVERELATIONS_TEXT:0 "他国との関係を改善するために外交官を送ることができます。毎月、活動している外交官は、最大値に達して関係を維持するか、母国に帰るかを尋ねるまで、彼らのあなたに対する評価を改善するでしょう。属国、辺境伯および同君連合の下位国との関係は、他国との関係以上に改善することができます。"
+ HINT_IMPROVERELATIONS_TEXT:0 "他国との関係を改善するために外交官を送ることができます。毎月外交官が活動を続けるごとに、あなたに対する彼らの評価は最大になるまで上昇し、評価が最大になると、外交官に関係を維持させるか帰国させるかを尋ねられます。属国、辺境伯および同君連合の下位国との関係は、他国との関係以上に改善することができます。"
  HINT_COPTS_TITLE:0 "コプト教徒"
  HINT_COPTS_TEXT:0 "コプト教徒。"
