Save/Update files [ci skip]

--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -294,7 +294,7 @@
  muslim_school_opinion_events.3.d:0 "[school_opinion_decrease_country.GetAdjective]と[Root.GetAdjective]との長期にわたる紛争は宗教界へと広がり始めている。互いへの尊敬と寛容はずっと乏しいままであり、[Root.GetAdjective]の社会では[school_opinion_decrease_country.GetReligiousSchool]の考えが軽んじられている。"
  muslim_school_opinion_events.3.a:0 "けしからん。"
  muslim_school_events.1.t:0 "才能ある裁判官"
- muslim_school_events.1.d:0 "神学と法学の教育を受けることは、多くの場合、様々なマドラサのシャイフの指導の下での、古典的な法律の研究を含む長い工程である。学習したすべての研究や解説について、学生は証明書であるイジャを取得する。マドラサとシャイフの違いによるが、イジャの価値は必ずしも同じではない。\nある博学な人物は最近、全国のマドラサで非常に良い印象を与え続けている。間違いなく、彼はカーディーやムフティーとして素晴らしい生涯を送ることは間違いない。"
+ muslim_school_events.1.d:0 "神学と法学の教育を受けることは、多くの場合、様々なマドラサのシャイフの指導の下での、古典的な法律書を学ぶという長い過程が必要である。学習した研究書や解説書ごとに、学生はイジャという証明書を取得する。どのマドラサで、どのシャイフでという違いにより、イジャの価値は必ずしも同じではない。\nある博学な人物は最近、全国のマドラサで非常に良い印象を残しているが、間違いなく、彼はカーディーやムフティーとして素晴らしい生涯を送るであろう。"
  muslim_school_events.1.a:0 "[mufti_province.GetAreaName]で新しいカーディーが必要だと聞いている。"
  muslim_school_events.1.b:0 "彼は、[Root.Capital.GetCapitalName]のムフティーとして人々に法律的な指導をもたらすだろう。"
  muslim_school_events.2.t:0 "シャイフ・アル＝イスラム"
@@ -309,7 +309,7 @@
  muslim_school_events.3.d:0 "[madrassah_province.GetAreaName]の著名な市民は、[madrassah_province.GetCapitalName]に新しいマドラサを設立するために多くの慈善の寄付を行った。彼らはより広い[madrassah_province.GetAreaName]だけでなく、[Root.Capital.GetCapitalName]や外国の神学者からも学者を招待している。"
  muslim_school_events.3.a:0 "素晴らしい。"
  muslim_school_events.4.t:0 "ガーズィー"
- muslim_school_events.4.d:0 "何世紀にもわたって、信仰を拡大する戦争は、敵の土地を襲撃し、忠実な者の階級を強化する、イスラムの国境にある「ガーズィー」もしくは聖戦士たちの集団を見ている。[infidel.GetAdjective]の異教徒に対する我々の戦争はそのような戦士の注目を集めている。彼らは聖なる戦士としての価値を証明するため、そしてあるいは戦利品の約束のために、我々の階級に加わった。"
+ muslim_school_events.4.d:0 "何世紀もの間、信仰を拡大する戦争では、イスラムの辺境で聖戦士「ガーズィー」の集団が敵の土地を襲撃し、信者の隊列を強化してきた。[infidel.GetAdjective]の異教徒に対する我々の戦争は、そのような戦士たちの注目を集めている。彼らは聖なる戦士としての価値を証明するため、そしておそらく戦利品が約束されているために、我々の隊列に加わった。"
  muslim_school_events.4.a:0 "彼らを歓迎する。"
  muslim_school_events.5.t:0 "[holy_city.GetCapitalName]の管理者"
  muslim_school_events.5.d:0 "聖地である[holy_city.GetCapitalName]の聖廟を訪れる巡礼者の数が年々増加している。信者はイスラム世界のあらゆる地域からやって来ており、商業、物資、資本、情報、アイデアを遠く離れた場所から我々の港へともたらしている。"
@@ -369,7 +369,7 @@
  muslim_school_events.19.a:0 "これらの人々が我々に与えるものと比べれば、いくつかの罪は問題ではない。"
  muslim_school_events.19.b:0 "背信者のみが恐れるだろう。"
  muslim_school_events.20.t:0 "[Root.GetName]の学派"
- muslim_school_events.20.d:0 "若い国家であるがゆえに、我々はまだ特定の宗教学派を後援していない。神に従う方法はたくさんあるが、我々の支配者が指導するための具体的な指導教義を持つべきである。"
+ muslim_school_events.20.d:0 "若い国家であるがゆえに、我々はまだ特定の宗教学派を後援していない。神に従う方法はたくさんあるが、我々の統治者が従うべき特定の指導教義を持つべきである。"
  muslim_school_events.20.a:0 "OK"
  muslim_school_events.20.b:0 "我々はアブー・ハニーファの学派に従おう。"
  muslim_school_events.20.c:0 "ハンバルの方法が唯一の存在だ。"
@@ -379,7 +379,7 @@
  muslim_school_events.20.g:0 "イスマイル・イブン・ジャアファルとその信奉者たちが、我々を導いてくれるだろう。"
  muslim_school_events.20.h:0 "我々の主義を隠すことはない！我々はザイド・イブン・アリーの教えに従うべきだ。"
  muslim_school_events.21.t:0 "新スーフィー主義と伝統主義者の反応"
- muslim_school_events.21.d:0 "ウラマーの多くは、[Root.Monarch.GetTitle]に不満を募らせている。敬虔なムスリムの中で、異教徒の習慣や伝統を採用することだけでなく、我々の高位の官職に異教徒を含めることは、軽蔑を持って見られている。ウラマーの法律や他の伝統的な分野の解釈に関する国家の介入は、王国の法学者の間で国家に対する賛同者を得られていない。\nスーフィーのナクシュバンディー教団のカリスマ的なシャイフは、我々の領土でイスラム法の不正な、そして場合によっては罪深い実践とみなされる国家に対する扇動を始めた。"
+ muslim_school_events.21.d:0 "ウラマーの多くは、[Root.Monarch.GetTitle]に不満を募らせている。敬虔なムスリムの中で、異教徒の習慣や伝統を採用することだけでなく、我々の高位の官職に異教徒を含めることは、軽蔑を持って見られている。法律の解釈やウラマーの他の伝統的な分野に関する国家の介入は、王国の法学者の間で国家に対する賛同者を得られていない。\nスーフィーのナクシュバンディー教団のカリスマ的なシャイフは、我々の領土でイスラム法の不正な、場合によっては罪深い実践とみなされる国家に対する扇動を始めている。"
  muslim_school_events.21.a:0 "惜しいかな、彼らは誤っている。"
  muslim_school_events.21.a.tt:0 "これからは、宗教施設が[Root.Monarch.GetTitle]の不敬な行為に対して、より強く反応するでしょう。"
  muslim_school_events.21.a.ttb:0 "§Yウラマー§!は今や、より多くの土地が与えられることを期待するでしょう。"
@@ -730,7 +730,7 @@
  mamluk_events.1.a:0 "揺籃期において、我々はこれを鎮圧する必要がある！"
  mamluk_events.1.b:0 "彼らの状況を改善するために何ができるかを見てみよう。"
  mamluk_events.2.t:0 "タルフと王室の独占"
- mamluk_events.2.d:0 "我々の先人たちは、換金作物や高級品からの収入を支配するために王室の独占体制を賢明に利用してきた。しかし、需要の落ち込みにより、我々はこれらの投資に対して金を失いつつある。[monopoly_province.GetName]の我々の監督官は、彼らが2年間、在庫を売ることができなかったことを報告しており、これが国家の資金の損失となることを懸念している。\n彼は、我々の投資を取り戻すことができるように、我々は国民にこれらの品物を設定された価格で購入するのを強制することを提案している。伝統的にタルフとして知られている手法である。"
+ mamluk_events.2.d:0 "我々の先人たちは賢明にも王室の専売制度を利用し、換金作物や高級品からの収入をコントロールしてきた。しかし、需要の落ち込みにより、我々はこれらの投資に対して損失を出している。[monopoly_province.GetName]の我々の監督官は、彼らが2年間、在庫を売ることができなかったことを報告しており、これが国家の資金の損失となることを懸念している。\n彼は、我々の投資を取り戻すことができるように、我々が国民にこれらの品物を設定された価格で購入するのを強制することを提案している。伝統的にタルフとして知られている手法である。"
  mamluk_events.2.a:0 "何と素晴らしい考えだ！"
  mamluk_events.2.b:0 "我々はただ損失を我慢する必要がある。"
  mamluk_events.3.t:0 "[mamluk_province.Culture.GetName]のアミールの反乱"
@@ -753,7 +753,7 @@
  mamluk_events.6.e:0 "来たる世代は我々が建てた記念碑を羨ましく思うだろう。"
  mamluk_events.6.f:0 "今、カイロ市民のためにできることはあまりない。"
  mamluk_events.7.t:0 "新たなアミール・アル＝ハッジ"
- mamluk_events.7.d:0 "メッカとメディナの二聖都への巡礼は、すべてのムスリムが一生のうちに少なくとも一度は着手すべきものである。[Root.Monarch.GetTitle]として、彼らが安全に目的地に到達できるようにすることが、我々の責任である。これは、多くの点で、狡猾さと武力の両方の能力を必要とする立場であり、進める方法は、襲撃者を倒すことから、地方の支配者との交渉、あからさまな脅迫や賄賂に至るまでさまざまである。アミール・アル＝ハッジは巡礼の隊商への全ての責任を負い、すべての[Root.GetAdjective]巡礼者のための安定した平和な道をどのように達成するかについて、大きな自由を得るだろう。"
+ mamluk_events.7.d:0 "メッカとメディナの二聖都への巡礼は、すべてのムスリムが一生のうちに少なくとも一度は行うべきものである。[Root.Monarch.GetTitle]として、彼らが安全に目的地に到達できるようにすることが、我々の責任である。これは襲撃者の討伐から、地元の支配者との通行交渉、あからさまな脅迫や賄賂に至るまで多岐にわたり、様々な意味で狡猾さと武力の両方の能力を必要とする役職である。アミール・アル＝ハッジは巡礼の隊商への全ての責任を負い、すべての[Root.GetAdjective]巡礼者のための安定した平和な通行をどのように達成するかについて、大きな自由裁量があるだろう。"
  mamluk_events.7.a:0 "我々自身の中で最良のベドウィンを選択しよう。"
  mamluk_events.7.a.tt:0 "§Yアミール・アル＝ハッジ§!のあなたの選択は、巡礼の問題がもたらす影響のタイプだけでなく、あなたの人々の巡礼の隊商の成功率に影響します：\nベドウィンのアミール・アル＝ハッジは、他の選択肢ではできない危険から隊商を守ることができるでしょう。"
  mamluk_events.7.b:0 "アラビアの砂漠で生活しているベドウィンを選択しよう。"
