--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -2002,7 +2002,7 @@
  desc_hindu_education:0 "我が国家には改革された教育制度が導入されている。それはヒンドゥー教の神学と国家管理の教えに焦点を当てている。"
  sapta_puri_modifier:0 "七聖都"
  desc_sapta_puri_modifier:0 "ヒンドゥー教の7つの神聖な巡礼地をしている。忠実な人々は、我々の宗教的情熱に触発されている。"
- ulemma_appeased:0 "ウラマーの鎮撫"
+ ulemma_appeased:0 "ウラマーを宥めた"
  desc_ulemma_appeased:0 "ウラマーの関心事は、ヒンドゥー教のバラモンのそれより優先されている。これはムスリム臣民を鎮撫する。"
  gen_brahmin_loyalty:0 "バラモンの忠誠"
  desc_gen_brahmin_loyalty:0 "ヒンドゥー教のバラモンの関心事は、ムスリムのウラマーのそれよりも持ち上げられている。これは我々のヒンドゥー教徒の臣民を鎮撫する。"
