--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -461,7 +461,7 @@
  improve_the_han_desc:1 "殿、我が藩は荒廃した状態にあります。農家や商人は、我々の通貨と、債務返済に対するすべての信頼を失っております。"
  view_the_hanami_title:1 "花見への羨望"
  view_the_hanami_desc:0 "今年は小さく弱々しい花が咲いた。寒い天気が原因だと言う者もいるが、この繊細な花に向かう芸術が我々の領土から去っていったという者もいる。我々の文化的伝統を高め、我々の桜を日本の羨望に満ちたものとしよう。"
- coptic_conquest_of_yerevan_title:1 "エレバンの解放"
+ coptic_conquest_of_yerevan_title:1 "エレヴァンの解放"
  coptic_conquest_of_yerevan_desc:0 "アルメニアの聖母である聖エチミアジンは未だ強く立っているが、アルメニアのコプト教徒は1360年と1375年の王国の崩壊以来、独自の国家を持っていない。我々はこれを最後に、アルメニアのコプト教徒たちを我々自身の旗の下で解放しよう！"
  coptic_conquest_of_antioch_title:1 "アンティオキア総主教"
  coptic_conquest_of_antioch_desc:0 "何世紀も前、アンティオキアは外国の侵略者の手に落ち、それ以来、真のアンティオキア総主教はアナトリアのマルディンに位置している。我々はこの古代の地位を取り戻し、正当な故郷で、世界で最も古いキリスト教会を再建しなければならない。"
@@ -831,7 +831,7 @@
  tr_cross_the_mongol_border_title:0 "ステップを請求せよ"
  tr_cross_the_mongol_border_desc:0 "我々は、キプチャクのタタールに戦いを挑まなければならない。彼らのステップは全て母なるロシアに属するため、その中心地にロシアの旗を打ち立てなければならない。"
  tr_conquer_finland_title:0 "フィンランドの征服"
- tr_conquer_finland_desc:0 "スウェーデンは聖なる母ロシアにとって危険な存在であり続けている。いい加減、我々は緩衝地域として機能するようフィンランドを征服しなければならない。"
+ tr_conquer_finland_desc:0 "スウェーデンは聖なる母ロシアにとって危険な存在であり続けている。ロシアをしっかりと守るために、我々は緩衝地域として機能するようフィンランドを征服しなければならない。"
  tr_subjugate_crimea_title:0 "クリミアを従属化せよ"
  tr_subjugate_crimea_desc:0 "クリミアのタタール人は、非常に長い間、ステップで大暴れすることを許されてきたが、今や第三のローマは、誰が支配者であるかを彼らに示す時だ。"
  tr_subjugate_kazan_title:0 "カザンの服属化"
@@ -1631,7 +1631,7 @@
  gc_por_discovers_cape_good_hope_title:0 "喜望峰"
  gc_por_discovers_cape_good_hope_desc:0 "危険な海域が伝説的なアフリカの岬を取り巻いているが、その先にある不思議を誰が知っているだろうか？我々の拡大は、商船に大きな負担をかけており、適切な保護を確実に提供しなければならない。"
  gc_por_discover_african_coast_title:0 "ボジャドール岬を越えて"
- gc_por_discover_african_coast_desc:0 "我々の探検家たちは、アフリカがさらに南に少しだけ広がっており、すぐに我々が活発に行き来し、プレスター・ジョンの王国を発見できると信じている。王国との同盟を確保すれば、我々は聖なる土地から荒野を一掃することができる。"
+ gc_por_discover_african_coast_desc:0 "我々の探検家たちは、アフリカがもう少し南まで広がっており、ぐるりと周ればすぐにプレスター・ジョンの王国を発見できると信じている。王国との同盟を確保すれば、我々は聖なる土地から荒野を一掃することができるだろう。"
  gc_por_colonise_west_africa_title:0 "西アフリカの植民地化"
  gc_por_colonise_west_africa_desc:0 "アフリカは我々が最初に信じたよりもさらに南に伸びているようだ。プレスター・ジョンの伝説の王国は確かに近くにある。アフリカは確実にこれ以上大きくなることはないだろう。"
  gc_por_colonise_central_africa_title:0 "中央アフリカへの定住"
@@ -1708,9 +1708,9 @@
  por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、「§Y三角貿易§!」を§Y20年間§!獲得し、以下の効果を得ます：\n交易品生産：§G+10%§!"
  por_indian_investment_tooltip:1 " §Yインド§!亜大陸で領有するステートに、交易会社投資が1以上ある"
  gc_portugal_discovers_india_title:0 "インドへ前進"
- gc_portugal_discovers_india_desc:0 "我々はプレスター・ジョンの王国の兆候を見つけられていないが、香辛料貿易を手にしてムーア人に打撃を与えることができる。我々は、我々がキリスト教世界を守るために少しでも何かできるように、インドを発見する必要がある。"
+ gc_portugal_discovers_india_desc:0 "我々はプレスター・ジョンの王国の兆候を見つけられていないが、香辛料貿易を我々の手に取り戻すことでムーア人に打撃を与えることができる。我々がインドを発見しなければならない。そうすれば、キリスト教世界を守るために何か少しでも貢献できるはずだ。"
  gc_portugal_discovers_the_far_east_title:0 "キャセイへ進め"
- gc_portugal_discovers_the_far_east_desc:0 "マルコ・ポーロの帰還以来、我々はキャセイの驚異的な富について耳にしている。我々はこれがどこにあるかを正確に発見しなければならない。"
+ gc_portugal_discovers_the_far_east_desc:0 "マルコ・ポーロの帰還以来、我々はキャセイの驚異的な富について耳にしている。我々はこれがどこにあるかを正確に特定しなければならない。"
  gc_ara_consultate_of_the_sea_title:0 "海事領事館"
  gc_ara_consultate_of_the_sea_desc:0 "海事領事館は、バレンシアから我が国の海上での商取引を管理する。しかし、その法律を執行する能力は、地中海西部における交易の流れを制御できるかどうかに依存している。領海近くの交易占有率の大部分を確保することにより、領事館の取り組みを支援しなければならない。"
  gc_ara_valencian_silk_title:0 "バレンシアの絹"
