Save/Update files [ci skip]

--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  exploration_events.1.t:0 "$PROVINCENAME$における試練"
- exploration_events.1.d:0 "植民できる地域を見つけるという我々の使命は、$PROVINCENAME$でつまづいた。原住民たちは我々に敵対的だが、土地は非常に繁栄している。我々はこの地域との交易から多くを得られるだろう。ただ、首長か、二番目の者あたりを買収する必要があるかもしれないが…"
+ exploration_events.1.d:0 "植民できる地域を見つけるという我々の使命の最中に、我々は$PROVINCENAME$を偶然発見した。原住民たちは我々に敵対的だが、土地は非常に繁栄している。この地域と交易すれば多くの利益を得られるだろう。ただ、首長か、二番目の者あたりを買収する必要があるかもしれないが…"
  exploration_events.1.a:0 "彼らに公平な取引をしよう。"
  exploration_events.1.b:0 "彼らに不公平な取引をしよう。"
  exploration_events.2.t:0 "$PROVINCENAME$騎兵隊"
@@ -15,7 +15,7 @@
  exploration_events.4.d:0 "見張りは住居の兆候を報告していたが、船は原住民を見つけられずにいた。しかし、とうとう$PROVINCENAME$の沿岸に村を発見した。小規模な軍隊が下船し歓迎を受けた。どうやら我々が彼らよりも身長が高くひげを貯えていたことが、原住民には魅力的に映ったようだ。原住民はひげが無く、彼らの神話や伝説によると、ひげを生やした神々が海から来て彼らの元を訪れる時が来るという予言を、なんとか苦労して我々に伝えた。与えられた食糧と金から、州が繁栄しており、我々にとって大きな価値があることを示している。"
  exploration_events.4.a:0 "こここそが約束された地だ！"
  exploration_events.5.t:0 "夏に入った船"
- exploration_events.5.d:0 "クリストファー・コロンブスは$PROVINCENAME$の人々について的確に記録している。「彼らは彼らの持つものすべてを我々に与えてきました。それも善意で…彼らは相手をもてなすことに無上の喜びを感じるようです…彼らは非常に紳士的で、悪というものを知らず、殺人や盗みとも無縁であります…陛下も、彼らがこの世界で最高の人々であるとお考えになるはずです…彼らは隣人を彼ら自身であるかのように愛し、幸せな会話を交わし、礼儀正しく、そしていつも笑っているのです…」"
+ exploration_events.5.d:0 "クリストファー・コロンブスは$PROVINCENAME$の人々について的確に記録している。「彼らは我々と交易し、彼らの持つものすべてを我々に与えてきました。それも善意で…彼らは相手をもてなすことに無上の喜びを感じるようです…彼らは非常に紳士的で、悪というものを知らず、殺人や盗みとも無縁であります…陛下も、彼らがこの世界で最高の人々であるとお考えになるはずです…彼らは隣人を彼ら自身であるかのように愛し、幸せな会話を交わし、礼儀正しく、そしていつも笑っているのです…」"
  exploration_events.5.a:0 "それらの利点を活用しよう！"
  exploration_events.5.b:0 "彼らの穏やかなやり方をうまく使おう。"
  exploration_events.6.t:0 "招かれざる客"
@@ -40,10 +40,10 @@
  exploration_events.11.d:0 "遠征隊が$PROVINCENAME$に迫ったとき、魅惑的な海岸に立つ原住民から放たれた矢が船を襲った。大声を上げながら彼らのカヌーに飛び乗る敵から急いで離れようとしたが、乗組員の何人かが、矢に射たれ船外に転落してしまい、我々は彼らを見捨てて逃げなければならなかった。$PROVINCENAME$から離れた海に停泊すると、船の右舷全面が矢で覆われていることを発見した。\n攻撃を受けた船に乗っていた探検家は重傷を負い、彼を襲った矢には毒が塗られていた。彼は数日間発熱して床に伏し、汗をかき、うめいた。外科医の手当てと尿やオリーブ油でできた消毒剤にもかかわらず、彼はしばらく前に亡くなった。"
  exploration_events.11.a:0 "こんな酷い運命があるか！"
  exploration_events.12.t:0 "酔っぱらいの探検家"
- exploration_events.12.d:0 "我々の遠征隊の一人、よりによって探検家が！$PROVINCENAME$の原住民が醸造した果実酒に対する耐性を過大評価したために、とんでもなく恥ずかしい状況に陥ってしまったのだ。いまわしいことの詳細は報告書に載せていないが、彼は長い間豚のように吐いていた。原住民は面白がり、彼の無惨さを笑っていたが、この出来事の噂は、そのような行動を嫌う社交界の上流階級の耳に達してしまった。"
- exploration_events.12.a:0 "果実酒？持って帰ったの？"
+ exploration_events.12.d:0 "遠征隊の一人が、よりによって我々の探検家が！$PROVINCENAME$の原住民が醸造した果実酒に対する耐性を過大評価したために、とんでもなく恥ずかしい状況に陥ってしまったのだ。忌まわしいことの詳細は報告書に載せていないが、彼は長い間まるで豚のように泥酔していた。原住民は面白がり、彼の無惨さを笑っていたが、この出来事の噂は、そのような行動を嫌う社交界の上流階級の耳に達してしまった。"
+ exploration_events.12.a:0 "果実酒？いくつか持って帰った？"
  exploration_events.13.t:0 "ペンギン料理"
- exploration_events.13.d:0 "$PROVINCENAME$の唯一の住人は、鳥、鳥、ただひたすら鳥であるようだ。彼らの小さな翼のために船の乗組員によって「ペンギン」という愛称をつけられた大きな鳥は、我々を恐れていないようだ。我々が最初に捕まえたペンギンは、我々をじっと見つめるだけで、飛んだり逃げたりして悩まされることはなかった。我々がその脚をつかみ、逆さまにすると大きな鳴き声をあげた。我々の周りのペンギンの群れが助けに駆けつけ、彼らの大きな嘴で我々を噛もうとした。我々の食糧は乏しく、これらの鳥は脂肪が多く、食べるのに適しているように見える。"
+ exploration_events.13.d:0 "$PROVINCENAME$の唯一の住人は、鳥、鳥、ただひたすら鳥であるようだ。彼らの小さな翼のために船の乗組員によって「ペンギン」という愛称をつけられた大きな鳥は、我々を恐れていないようだ。我々が最初に捕まえたペンギンは、我々をじっと見つめるだけで、飛んだり逃げたりして悩まされることはなかった。我々がその脚をつかみ、逆さまにすると大きな鳴き声をあげた。我々の周りのペンギンの群れが助けに駆けつけ、彼らの大きな嘴で我々を噛もうとした。我々の食糧は乏しいが、これらの鳥は太っており、十分に食べられそうだ。"
  exploration_events.13.a:0 "鳥たちをそっとしておいてやろう。"
  exploration_events.13.b:0 "食べてみよう！"
  exploration_events.14.t:0 "予期せぬ冒険者"
