--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -366,7 +366,7 @@
  flavor_hun.1.a:0 "摂政としてフニャディ・ヤーノシュを選出"
  flavor_hun.1.b:0 "現在の評議会を維持"
  flavor_hun.2.t:0 "マーチャーシュ・コルヴィヌス"
- flavor_hun.2.d:1 "大きな疑念が残る中で$MONARCHTITLE$$MONARCH$は王位を残して突然死亡した。[HAB.GetName]の[HAB.Monarch.Dynasty.GetName]王朝は依然として王位を支配したいと考えているが、偉大なヴォイヴォダであるフニャディ・ヤーノシュの息子もいる。我々の偉大な国家は自身のうちの一つを王として選ぶべきだろうか？"
+ flavor_hun.2.d:1 "大きな疑念が残る中で$MONARCHTITLE$$MONARCH$は急逝して王座が空位となった。[HAB.GetName]の[HAB.Monarch.Dynasty.GetName]王朝は依然として王位を支配したいと考えているが、偉大なヴォイヴォダであるフニャディ・ヤーノシュの息子もいる。我々の偉大な国家は自国のうち誰を王として選ぶべきだろうか？"
  flavor_hun.2.a:0 "マーチャーシュを王に選出しよう。"
  flavor_hun.2.b:0 "ドイツ人の王が一番だ！"
  flavor_hun.2.c:0 "我々には[Root.Heir.GetName]がいることを忘れるべきではないだろう。"
@@ -1030,7 +1030,7 @@
  flavor_swe.EVTOPTA3259:0 "裏切り者と交渉する。"
  flavor_swe.EVTOPTB3259:0 "裏切り者を処刑する。"
  flavor_swe.EVTNAME3260:0 "グスタフ4世アドルフの退位"
- flavor_swe.EVTDESC3260:0 "1809年にフィンランドにおける壊滅的な敗北は、グスタフ4世アドルフに大きく起因したものであるとして、1809年3月13日、スウェーデン西部の軍の特定の自由主義的な将校と役人たちによるクーデターで、彼は解任された。グスタフと彼の後継者は王位を奪われ、国を離れるように勧められた。退位させられた王は最終的にグスタフソン大佐の名でスイスに定住した。新たな君主を探す間、スウェーデンはグスタフの叔父で、高齢で子のいない、カール13世によって支配された。デンマークの王子クリスチャン・アウグストが選出されたが、彼は1810年に突如死亡した。リクスダーゲンは必死に割り当てを行い、最終的にフランスの元帥であったジャン・バティスト・ジュール・ベルナドットに決定された。"
+ flavor_swe.EVTDESC3260:0 "1809年におけるフィンランドの壊滅的喪失は、グスタフ4世アドルフに大きく起因したものであるとして、1809年3月13日、スウェーデン西部軍の一部自由主義的な将校・官僚らによるクーデターで、彼は退位させられた。グスタフと王太子は王位を奪われ、国外退去を勧められた。退位させられた王は最終的にグスタフソン大佐の名でスイスに定住した。新たな君主を探す間、スウェーデンはグスタフの叔父で、高齢で子のいない、カール13世によって支配された。デンマークの王子クリスチャン・アウグストが選出されたが、彼は1810年に急逝した。リクスダーゲンが懸命に代わりを探した結果、フランスの元帥であったジャン・バティスト・ジュール・ベルナドットに決定した。"
  flavor_swe.EVTOPTA3260:0 "彼を退位させる。"
  flavor_swe.EVTOPTB3260:0 "彼に支配させよう。"
  flavor_swe.EVTNAME3261:0 "グスタフ4世アドルフの改革"
@@ -1115,7 +1115,7 @@
  flavor_rus.EVTNAME1002:0 "ミハイル・ロモノーソフ"
  flavor_rus.EVTDESC1002:0 "19歳の時、ロモノソーフはモスクワのスラヴ・ギリシャ・ラテン・アカデミーへ司祭の息子であると偽って入学した。サンクトペテルブルク大学での奨学金は、その後、ドイツ啓蒙哲学者クリスチャン・ウォルフの指導の下、マールブルク大学での海外留学まで続いた。ロモノーソフは様々な分野で重要なロシア科学者となったが、おそらく金星の大気圏を発見したことで最もよく知られている。彼は1764年に州の大臣に任命されたが、わずか1年後に死亡した。"
  flavor_rus.EVTNAME3203:0 "ボリス・モロゾフ"
- flavor_rus.EVTDESC3203:0 "ロシアの政治家であり、クレムリンの宮廷で長い職歴を持つ会計家である。彼はツァーリであるアレクシスの義理の弟であり、アレクシスの初期の治世中に政府を率いた。給与と大蔵省を監督するモロゾフは、給与を引き下げ、新しい税金を導入することによって国家の収入を増やそうとした。塩に高い税金を課したことで、1648年の塩一揆に名前が残ることとなった。修道院での短い追放の後、モロゾフはモスクワに戻り、彼は政府の多くを支配しながら、自身は目立たない存在であった。彼は後にイヴァン3世によるスジェブニク法典に替わる新しい法典である会議法典の起草に参加した。それは、農奴および定められた階級に対する世襲で不変の所有権を、貴族が独占的な特権として有するだけでなく、農奴制を強固にするものであった。"
+ flavor_rus.EVTDESC3203:0 "クレムリン宮廷で長く活躍したロシアの政治家、財務官。ツァーリであるアレクシスの義理の弟であり家庭教師であった彼は、アレクシスの治世初期に政府を率いた。給与と大蔵省を監督するモロゾフは、給与を引き下げ、新しい税金を導入することによって国家の収入を増やそうとした。塩に高い税金を課したことで1648年の塩一揆を引き起こし、塩一揆の名前にもなった。修道院での短い亡命の後、モロゾフはモスクワに戻り、彼は政府の大部分支配しながら、自身は目立たないようにしていた。彼は後にイヴァン3世によるスジェブニク法典に替わる新しい法典である会議法典の起草に参加した。この法典は、農奴制と農奴を所有する貴族の独占的特権を強固にし、階級を世襲的かつ不変のものとして規定した。"
  flavor_rus.EVTNAME3401:0 "パメスティ改革"
  flavor_rus.EVTDESC3401:0 "1471年にモスクワがノヴゴロドを侵略し、リトアニアがノヴゴロドの援助に失敗した後、ノヴゴロドは独立をさらに制限するコロスティニ条約を受け入れざるを得なくなった。イヴァン3世は、父親に起こった事の故に、なおも反乱を警戒し、ノヴゴロド市民の多くを追放した。彼はまた、ノヴゴロド教会の指導者をロシア正教会の指導者と入れ替えた。土地は住民から取り上げられ、兵役の代償として騎兵たちに与えられた。パメスティ制度と呼ばれた土地管理の改革をそこで確立した後、彼はそれをモスクワに導入した。ボヤールと呼ばれた地方貴族の所有地を奪い、それを軍に与えることにより、権力を強化、集中させ、軍や他の家臣たちの忠誠心を築くのに役立てた。1489年までには、ノヴゴロドはもとの姿の抜け殻となり、今ますます増大するロシアの国家の一部となった。"
  flavor_rus.EVTOPTA3401:0 "改革しよう。"
@@ -1147,7 +1147,7 @@
  flavor_rus.EVTOPTB3413:0 "大蔵省を改革するだけにする。"
  flavor_rus.EVTOPTC3413:0 "給餌を廃止するだけにする。"
  flavor_rus.EVTNAME3415:0 "ロシア正教会の独立宣言"
- flavor_rus.EVTDESC3415:1 "ビザンツ帝国が崩壊して間もなく、ロシア教会は事実上、コンスタンティノープル総主教庁から独立していた。ロシア主教協議会によって任命された府主教ヨナは、モスクワおよび全ルーシの総主教の称号を与えられた。ロシア教会はロシア国家と結びつく代わりに、コンスタンティノープルから独立して以来、ますます成長してきている。"
+ flavor_rus.EVTDESC3415:1 "ビザンツ帝国が崩壊する少し前に、ロシア教会は事実上コンスタンティノープル総主教庁から独立した。ロシア主教協議会によって任命された府主教ヨナは、モスクワおよび全ルーシの総主教の称号を与えられた。それ以来、ロシア教会はますますコンスタンティノープルから独立し、代わりにロシア国家と結びつくようになった。"
  flavor_rus.EVTOPTA3415:1 "真の信仰を[Root.Capital.GetCapitalName]から導こう。"
  flavor_rus.EVTOPTB3415:1 "同胞がコンスタンティノープルを取り戻すのを助けよう。"
  flavor_rus.EVTOPTC3415:0 "トルコ人からコンスタンティノープルを解放することが我らの宿命なのだ！"
@@ -1164,7 +1164,7 @@
  flavor_rus.EVTOPTA3418:0 "我々は教会を近代化しよう。"
  flavor_rus.EVTOPTB3418:0 "ラスコーリニキの注意に従う"
  flavor_rus.EVTNAME3419:0 "フョードル・バイコフの外交芸"
- flavor_rus.EVTDESC3419:0 "フョードル・バイコフは1656年に中国との外交関係を開くために北京に赴いた。しかし、中国の礼儀を誤解した彼は、中国の閣僚たちが、ロシアが中国を主君として認めたと信じるような行動を取った。書簡はモスクワに送られた。この手紙には、「ロシア」が今支払う必要がある年ごとの貢物に関する指示が含まれていた。ツァーリは、モスクワの誰もが中国語を理解できなかったので、抗議する機会もなかった。ロシア政府は何事もなかったかのようにこの出来事を無視し、中国は満州王朝による征服に忙殺されていた。"
+ flavor_rus.EVTDESC3419:0 "フョードル・バイコフは1656年に中国との外交関係を開くために北京に赴いた。しかし、中国の礼儀作法を誤解した彼は、中国の閣僚たちが、ロシアが中国を主君として認めたと思わせるような行動を取ってしまった。一通の書簡がモスクワに送られた。その手紙には、「ロシア」が今支払う必要がある年ごとの貢物に関する指示が含まれていた。ツァーリは、モスクワの誰もが中国語を理解できなかったので、抗議する機会もなかった。ロシア政府は何事もなかったかのようにこの出来事を無視し、中国は満州王朝による征服に忙殺されて気にする暇もなかった。"
  flavor_rus.EVTOPTA3419:0 "要求を無視する。"
  flavor_rus.EVTOPTB3419:0 "中国の臣下であるふりをする。"
  flavor_rus.EVTOPTC3419:0 "中国の臣下であるふりをして、貢物を送る。"
@@ -2438,8 +2438,8 @@
  flavor_brapru.23.a.tt:0 "アンスバッハはブランデンブルクの同君連合§R下位国§!となります。"
  flavor_brapru.23.b:0 "アルブレヒトは王位を一族の者に譲らねばならない。"
  flavor_brapru.25.t:0 "アキレアの処分"
- flavor_brapru.25.da:1 "ホーエンツォレルン家の土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、それらが分割され、将来再び分離される恐れがあることである。事実、ブランデンブルク辺境伯自体、溢れんばかりの息子たちの間で分割されるかもしれないのだ。このことは、ザクセンやテューリンゲンのようなかつて強大だった領土が、主要な称号の保持者たる多くの後継者らに分配され大変な目に遭ったこともあり、[Root.Monarch.GetName]がむしろ避けたいものであるのは明白である。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないと懸念する警告さえ受けている。選帝侯の地位は分割されないということだろう。\n\nしかし、我々がブランデンブルク選帝侯を永遠に守ろうとするなら、王朝のフランケン系の所有権を若き息子たちに手放さなければならないかもしれない。"
- flavor_brapru.25.db:0 "ブランデンブルクの土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、ブランデンブルクの辺境伯が過剰な数の息子たちの間で分割されるかもしれないことである。ザクセンやテューリンゲンのようなかつての強大な土地が、主要な多くの後継者によって分配されることでひどく悩まされることを、[Root.Monarch.GetName]がむしろ回避すべきであるのは明白である。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないという懸念する警告さえ受けている。選帝侯の地位は不可分のものだと思われる。"
+ flavor_brapru.25.da:1 "ホーエンツォレルン家の土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、それらが分割され、将来再び分離される恐れがあることである。事実、ブランデンブルク辺境伯自体、溢れんばかりの息子たちの間で分割されるかもしれないのだ。このことは、ザクセンやテューリンゲンのようなかつて強大だった領土が、主要な称号の保持者たる多くの後継者らに分配され大変な目に遭ったこともあり、[Root.Monarch.GetName]がむしろ避けたいものであるのは明白である。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないと懸念する警告さえ受けている。選帝侯の国は不可分であることが期待されるのだ。\n\nしかし、我々がブランデンブルク選帝侯を永遠に守ろうとするなら、王朝のフランケン系の所有権を若き息子たちに手放さなければならないかもしれない。"
+ flavor_brapru.25.db:0 "ブランデンブルクの土地は現在すべて[Root.Monarch.GetName]の手の中にあるが、気がかりなのは、ブランデンブルクの辺境伯が過剰な数の息子たちの間で分割されるかもしれないことである。ザクセンやテューリンゲンのようなかつての強大な土地が、主要な多くの後継者によって分配されることでひどく悩まされることを、[Root.Monarch.GetName]がむしろ回避すべきであるのは明白である。実際、帝国の宮廷から、我々が自分たちの継承を十分に保護していないという懸念する警告さえ受けている。選帝侯の国は不可分であることが期待されるのだ。"
  flavor_brapru.25.a:0 "ブランデンブルクは不可分たるべし！"
  flavor_brapru.25.a.tt:0 "§Rアンスバッハはもはやブランデンブルクの支配を受けない。§!"
  flavor_brapru.25.b:0 "一族が団結していないのが唯一の問題だ。"
@@ -4047,7 +4047,7 @@
  inc_hostage_huacas:0 "偶像ワカ"
  desc_inc_hostage_huacas:0 "我々の統治下の多くの人々によって崇拝された様々な偶像が、我々の首都の一つの家で全部見つかった。ここで偶像は彼らに訪れるかもしれないどんな害からも保護されており、そしてここで崇拝者たちは望むならば、これら偶像を見ることができる。我々の国民の偶像を管理することは、万が一誰が管理しているかを彼らがいずれ忘れることを考えると、悪いことではない。"
  inc_chimu_integration:0 "チムーの慣習の融合"
- desc_inc_chimu_integration:0 "現存するアンデス最古の国家として、チムーの人々は古代の文化の担い手である。彼らの宮廷生活は非常に手が込んでいて、職人たちは非常に熟練しており、行政方法は多くの点で我々より先進的である。したがって我々はできるだけ多くの彼らの文化を我々の文化と融合しようと決めた。これは私たちの行政にある程度の負担をかけるが、別な方法ではできなかったことを成し遂げることを可能にする。"
+ desc_inc_chimu_integration:0 "現存するアンデス最古の国家として、チムーの人々は古代の文化の担い手である。彼らの宮廷生活は非常に精巧で、職人たちは非常に熟練しており、行政方法は多くの点で我々より先進的である。したがって我々はできるだけ多く彼らの文化を我々の文化と融合しようと決めた。これは私たちの行政にある程度の負担をかけるが、別な方法ではできなかったことを実現することができる。"
  inc_no_chimu_soldiers:0 "チムーの非武装化"
  desc_inc_no_chimu_soldiers:0 "チムーはインカ軍に従事することは許されず、そのような任務に適しているチムーの人々は、代わりに中央政権のためのさまざまな任務を遂行して一般社会に彼らの文化を広めて定着させるために、領土の遠方に飛ばされた。"
  inc_smallpox_outbreak:0 "天然痘の流行"
@@ -4073,7 +4073,7 @@
  flavor_inc.6.a:0 "神殿にワカを移動する。"
  flavor_inc.6.b:0 "下級な神々はそのままにしておきなさい。"
  flavor_inc.7.t:0 "沿岸の人々"
- flavor_inc.7.d:0 "沿岸のチムーの人々は、アンデスの最も古い文化の一つの担い手である。彼らの土地は今我々の支配下に置かれているがゆえに、我々は彼らの匠や職人たちの作品に驚かざるを得ない。チムーの銀細工職人、織物工芸家、陶芸家たちはこれまで見たことのないような貴重品を生産している。\nこれらの貴重品や多くの職人たちが我々の王都に到着したことは、今や大宴会の下で祝福されている。チムーを統合することで、この地域の輝かしい過去との繋がりを作り、新しい汎アンデス国への道のりに必要な一歩を踏み出した。"
+ flavor_inc.7.d:0 "沿岸のチムーの人々は、アンデスの最も古い文化の一つの担い手である。彼らの土地が我々の支配下に入った今、我々は彼らの匠や職人たちの作品に驚かざるを得ない。チムーの銀細工職人、織物工芸家、陶芸家たちはこれまで見たことのないような宝物を生産している。\nこれらの宝物や多くの職人たちが我々の王都に到着し、現在盛大な宴会で祝われている。チムーを統合することで、我々はこの地域の輝かしい過去との繋がりを作り、新しい汎アンデス国への道のりに必要な一歩を踏み出した。"
  flavor_inc.7.a:0 "我々と彼らの文化を統合しよう。"
  flavor_inc.7.b:0 "これはたくさんの従属国の文化の一つに過ぎない。"
  flavor_inc.8.t:0 "チムーの反乱"
