--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1425,7 +1425,7 @@
  strengthened_bushido:0 "強化された武士道"
  desc_strengthened_bushido:0 "我々の武士道は、美徳と礼節という高潔な哲学によって常に導かれている。"
  mug_hindustan_mod:1 "人口爆発"
- desc_mug_hindustan_mod:1 "ヒンドゥスタンの人口密度の高い地域は、軍隊のための豊富な新兵と熟練兵を提供する。"
+ desc_mug_hindustan_mod:1 "ヒンドゥスターンの人口密度の高い地域は、軍隊のための豊富な新兵と熟練兵を提供する。"
  mug_gujarat_mod:1 "沿岸交易"
  desc_mug_gujarat_mod:1 "インダス川を支配することで、同地域の交易に大きな影響を与えることができる。"
  mug_malwa_mod:1 "灰の中から"
